kubernetes/apps/home-automation/rsstt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsstt
spec:
  selector:
    matchLabels:
      app: rsstt
  template:
    metadata:
      labels:
        app: rsstt
    spec:
      containers:
      - name: rsstt
        image: bokker/rss.to.telegram:develop
        volumeMounts:
        - name: data
          mountPath: /app/config
          subPath: rsstt
      - name: prisma-studio
        image: bokker/rss.to.telegram:develop
        command: ["sh", "-c"]
        args:
          - |
            npx prisma studio --schema /app/prisma/schema.prisma
        ports:
        - containerPort: 5555
        volumeMounts:
        - name: data
          mountPath: /app/config
          subPath: rsstt
      - name: sqlite-exporter
        image: adonato/query-exporter:latest
        ports:
        - containerPort: 9560
        volumeMounts:
        - name: data
          mountPath: /config
          subPath: rsstt-sqlite-exporter
        - name: data
          mountPath: /mnt/rss-to-telegram-volume
          subPath: rsstt
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: unraid-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prisma-studio
spec:
  selector:
    app: rsstt
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: prisma-studio
spec:
  ingressClassName: internal
  rules:
  - host: rsstt.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prisma-studio
            port:
              number: 5555
