kubernetes/apps/home-automation/rsstt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: prisma-internal
spec:
  ingressClassName: internal
  rules:
  - host: prisma.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prisma-studio
            port:
              number: 5555
